Fixed overflow issues

--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -86,5 +86,8 @@
 }
 
 
-
+#hero {
+    background: red;
+    width: 100vw;
+}
 
